<package>
  <name>rosbag_migration_rule</name>
  <version>1.0.1</version>
  <description>
    This empty package allows to export rosbag migration rule files without depending on rosbag.
  </description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosbag_migration_rule</url>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
